--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -13,6 +13,13 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    .footer {
+        display: block;
+        margin: 64px auto 24px auto;
+    }
+}
+
 @media screen and (max-width: 320px) {
     .footer {
         padding: 0 16px;
