--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,7 +1,7 @@
 .place__image {
     grid-row: 2;
     grid-column: 1;
-    width: 100%;
+    max-width: 100%;
 }
 
 @media screen and (max-width: 320px) {
