--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,7 +6,6 @@
     font-size: 18px;
     line-height: 163%;
     color: #fff;
-    max-width: 100%;
 }
 .place__paragraph:nth-child(2) {
     margin-top: 26px;
