--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -30,7 +30,7 @@
 }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 624px) {
     .place {
         display: block;
     }
