--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -17,6 +17,7 @@
         margin: 0 0 88px 0;
         padding: 0 24px;
         gap: 73px;
+        max-width: 100%;
     }
 }
 
